OLMIS-1578: added new datepicker directive and remove our custom talbe css from it

--- a/src/main/webapp/admin-template-list/program-administration-list.html
+++ b/src/main/webapp/admin-template-list/program-administration-list.html
@@ -2,7 +2,7 @@
     <div class="page">
         <h2>{{'configure.rnr.header' | message}}</h2>
         <div class="table-container">
-            <table ng-if="vm.programs.length">
+            <table class="openlmis-table" ng-if="vm.programs.length">
         		<thead>
         		<tr>
         			<th>{{'program.header' | message}}</th>
