--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -11,7 +11,7 @@
             </dl>
         </aside>
         <div class="template-container">
-            <table>
+            <table class="openlmis-table">
                 <thead>
                     <tr>
                         <th>{{'template.header.display' | message}}</th>
