--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
@@ -1,7 +1,7 @@
 <div class="page">
     <ng-include src="'proof-of-delivery-view/header.html'"></ng-include>
     <div class="product-grid table-container">
-    	<table table-pinned-columns>
+    	<table class="openlmis-table" table-pinned-columns>
     		<thead>
     			<tr>
                     <th>{{'label.productName' | message}}</th>
