--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -15,7 +15,7 @@
 				</select>
 				<input class="btn btn-primary" type="submit" value="{{'button.search' | message}}"/>
 			</form>
-			<table>
+			<table class="openlmis-table">
 				<caption ng-if="vm.infoMessage">{{vm.infoMessage | message}}</caption>
 				<thead>
 					<tr>
