--- a/src/main/webapp/openlmis-form/datepicker.html
+++ b/src/main/webapp/openlmis-form/datepicker.html
@@ -1,6 +1,4 @@
 <div class="olmis-datepicker">
     <i class="glyphicon glyphicon-calendar olmis-datepicker-icon"></i>
-    <input type="text" class="form-control" id="{{inputId}}"
-    	uib-datepicker-popup="dd-MM-yyyy" ng-model="value" is-open="isOpened" 
-    	datepicker-options="dateOptions" close-text="Close" ng-click="openDatepicker()"/>
+    <input type="text" class="form-control" ng-model="value" id="{{inputId}}" data-container="body" bs-datepicker/>
 </div>
