--- a/src/main/webapp/requisition-initiate/requisition-initiate.html
+++ b/src/main/webapp/requisition-initiate/requisition-initiate.html
@@ -60,7 +60,7 @@
             </fieldset>
             <input class="btn btn-primary" type="submit" value="{{'button.search'|message}}"/>
         </form>
-        <table ng-show="vm.periodGridData">
+        <table class="openlmis-table" ng-show="vm.periodGridData">
             <caption ng-if="!vm.periodGridData.length">
                 {{'msg.no.period.available' | message}}
             </caption>
