--- a/src/main/webapp/requisition-search/requisition-search.html
+++ b/src/main/webapp/requisition-search/requisition-search.html
@@ -30,7 +30,7 @@
             </fieldset>
             <input class="btn btn-primary" type="submit" value="{{'button.search' | message}}"/>
         </form>
-        <table ng-if="vm.requisitionList">
+        <table class="openlmis-table" ng-if="vm.requisitionList">
             <caption ng-if="!vm.requisitionList.length">
                 {{'msg.no.requisitions.found' | message}}
             </caption>
