OLMIS-1578: add missing table class on aproval screen

--- a/src/main/webapp/requisition-approval/requisition-approval-list.html
+++ b/src/main/webapp/requisition-approval/requisition-approval-list.html
@@ -1,7 +1,7 @@
 <div class="page approval-list">
     <h2>{{'label.approve.requisitions' | message}}</h2>
     <div class="table-container">
-        <table ng-if="vm.filteredRequisitions">
+        <table class="openlmis-table" ng-if="vm.filteredRequisitions">
             <caption ng-if="!vm.filteredRequisitions.length">
                 {{'message.no.rnr.pending.approval' | message}}
             </caption>
