--- a/src/main/webapp/requisition-summary/requisition-summary-popover.html
+++ b/src/main/webapp/requisition-summary/requisition-summary-popover.html
@@ -1,6 +1,6 @@
 <dl>
     <dt>{{'label.full.supply.products' | message}}</dt>
-    <dd><openlmis-currency value="vm.calculateFullSupplyCost()"></openlmis-currency></dd>
+    <dd>{{vm.calculateFullSupplyCost() | openlmisCurrency}}</dd>
     <dt ng-if="vm.showNonFullSupplySummary">{{'label.non.full.supply.products' | message}}</dt>
-    <dd ng-if="vm.showNonFullSupplySummary"><openlmis-currency value="vm.calculateNonFullSupplyCost()"></openlmis-currency></dd>
+    <dd ng-if="vm.showNonFullSupplySummary">{{vm.calculateNonFullSupplyCost() | openlmisCurrency}}</dd>
 </dl>
