--- a/src/main/webapp/requisition-summary/requisition-summary.html
+++ b/src/main/webapp/requisition-summary/requisition-summary.html
@@ -1,7 +1,7 @@
 <aside class="requisition-summary">
 	<dl>
 		<dt>{{'msg.totalRequisitionCost' | message}}</dt>
-		<dd><openlmis-currency value="vm.calculateTotalCost()"></openlmis-currency></dd>
+		<dd>{{vm.calculateTotalCost() | openlmisCurrency}}</dd>
 	</dl>
     <button
     		popover
