OLMIS-1690 changed field name after changes
changed field name productCategoryDisplayName to orderableCategoryDisplayName after rebase.

--- a/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
+++ b/src/main/webapp/proof-of-delivery-view/proof-of-delivery-view.html
@@ -14,7 +14,8 @@
                     <th>{{'label.notes' | message}}</th>
     			</tr>
     		</thead>
-    		<tbody title="{{category}}" ng-repeat="(category, lineItems) in vm.getCurrentPage() | groupBy:'$program.productCategoryDisplayName'">
+    		<tbody title="{{category}}"
+                   ng-repeat="(category, lineItems) in vm.getCurrentPage() | groupBy:'$program.orderableCategoryDisplayName'">
     			<tr ng-class="{'invalid-row': !vm.pod.isLineItemValid(lineItem)}"
                     ng-repeat="lineItem in lineItems | orderBy : 'orderLineItem.orderable.name'">
                     <td>{{lineItem.orderLineItem.orderable.name}}</td>
