OLMIS-1578: datepicker closes on selection date

--- a/src/main/webapp/openlmis-form/datepicker.html
+++ b/src/main/webapp/openlmis-form/datepicker.html
@@ -1,4 +1,5 @@
 <div class="olmis-datepicker">
     <i class="glyphicon glyphicon-calendar olmis-datepicker-icon"></i>
-    <input type="text" class="form-control" ng-model="value" id="{{inputId}}" data-container="body" bs-datepicker/>
+    <input type="text" class="form-control" ng-model="value" id="{{inputId}}"
+        data-container="body" data-autoclose="1" data-date-format="dd/MM/yy" bs-datepicker/>
 </div>
