OLMIS-1267 FEOLMIS-1045: Added function to REQUISITION_STATUS which returns display name for status
* Moved style to requisition-status-messages module
* Updated ngDocs

--- a/src/main/webapp/requisition-status-messages/status-messages-history.html
+++ b/src/main/webapp/requisition-status-messages/status-messages-history.html
@@ -1,12 +1,12 @@
-<form class="status-messages-history">
-    <aside class="status-history" ng-repeat="statusMessage in vm.requisition.$statusMessages">
+<div class="status-message">
+    <aside ng-repeat="statusMessage in vm.requisition.$statusMessages">
         <div class="status-header">
-            <span>{{statusMessage.status | capitalize }}</span>
-            by {{statusMessage.authorFirstName}} {{statusMessages.authorLastName}}
+            <span>{{statusMessage.status | requisitionStatus}}</span>
+            by {{statusMessage.authorFirstName}} {{statusMessage.authorLastName}}
             on {{statusMessage.createdDate | date: 'longDate'}}
         </div>
         <dl>
             <dd>{{statusMessage.body}}</dd>
         </dl>
     </aside>
-</form>
+</div>
