OLMIS-1784: Created openlmis-toolbar directive to standardize all toolbars
- changed some styling related to buttons
- added openlmis-toolbar directive to standardize toolbars
- refactored all toolbars to use the new directive
- moved Delete button behind Skip button on the requisition screen
- made the Delete button visible when requisition is submitted

--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -72,16 +72,7 @@
         </div>
     </div>
 </div>
-<div id="action_buttons" class="action-buttons">
-    <div class="form-cell button-row">
-        <button id="saveButton" ng-click="vm.saveTemplate()"
-            class="btn btn-primary save-button" ng-disabled="!vm.template.$isValid()">
-            {{'button.save' | message}}
-        </button>
-        <button id="cancelButton" ng-click="vm.goToTemplateList()"
-            class="btn btn-default save-button"
-            type="button">
-            {{'button.cancel' | message}}
-        </button>
-    </div>
-</div>
+<openlmis-toolbar>
+    <input type="button" id="saveButton" ng-click="vm.saveTemplate()" class="btn btn-primary" ng-disabled="!vm.template.$isValid()" value="{{'button.save' | message}}"/>
+    <input type="button" id="cancelButton" ng-click="vm.goToTemplateList()" class="btn btn-default" value="{{'button.cancel' | message}}">
+</openlmis-toolbar>
