--- a/src/main/webapp/requisition-view/requisition-toolbar.html
+++ b/src/main/webapp/requisition-view/requisition-toolbar.html
@@ -4,7 +4,7 @@
     <input type="button" class="btn btn-danger primary-action" ng-disabled="vm.isOffline()" ng-click="vm.removeRnr()" value="{{'button.delete' | message}}" ng-if="vm.displayDelete()"/>
     <input type="button" class="btn btn-primary primary-action" ng-disabled="vm.isOffline()" ng-click="vm.submitRnr()" value="{{'button.submit' | message}}" ng-if="vm.displaySubmit()"/>
     <input type="button" class="btn btn-primary primary-action" ng-disabled="vm.isOffline()" ng-click="vm.authorizeRnr()" value="{{'button.authorize' | message}}" ng-if="vm.displayAuthorize()"/>
-    <input type="button" class="btn btn-primary primary-action" ng-disabled="vm.isOffline()" ng-click="vm.rejectRnr()" value="{{'button.rnr.reject' | message}}" ng-if="vm.displayApproveAndReject()"/>
-    <input type="button" class="btn btn-danger primary-action" ng-disabled="vm.isOffline()" ng-click="vm.approveRnr()" value="{{'button.approve' | message}}" ng-if="vm.displayApproveAndReject()"/>
+    <input type="button" class="btn btn-danger primary-action" ng-disabled="vm.isOffline()" ng-click="vm.rejectRnr()" value="{{'button.rnr.reject' | message}}" ng-if="vm.displayApproveAndReject()"/>
+    <input type="button" class="btn btn-primary primary-action" ng-disabled="vm.isOffline()" ng-click="vm.approveRnr()" value="{{'button.approve' | message}}" ng-if="vm.displayApproveAndReject()"/>
     <input type="button" class="btn btn-primary primary-action" ng-disabled="vm.isOffline()" ng-click="vm.convertRnr()" value="{{'button.convert.to.order' | message}}" ng-if="vm.displayConvertToOrder()"/>
 </openlmis-toolbar>
