OLMIS-1784: Changed openlmis-toolbar from directive to style
- removed openlmis-toolbar directive
- created openlmis-toolbar style
- added KSS to the openlmis-toolbar
- refactored the toolbars to use the style

--- a/src/main/webapp/admin-template/template.html
+++ b/src/main/webapp/admin-template/template.html
@@ -72,7 +72,7 @@
         </div>
     </div>
 </div>
-<openlmis-toolbar>
+<div class="openlmis-toolbar">
     <input type="button" id="saveButton" ng-click="vm.saveTemplate()" class="btn btn-primary" ng-disabled="!vm.template.$isValid()" value="{{'button.save' | message}}"/>
     <input type="button" id="cancelButton" ng-click="vm.goToTemplateList()" class="btn btn-default" value="{{'button.cancel' | message}}">
-</openlmis-toolbar>
+</div>
