--- a/src/main/webapp/requisition-convert-to-order/convert-to-order.html
+++ b/src/main/webapp/requisition-convert-to-order/convert-to-order.html
@@ -63,7 +63,7 @@
 			</table>
 		</section>
 	</div>
-	<openlmis-toolbar ng-if="vm.requisitions.length">
+	<div class="openlmis-toolbar" ng-if="vm.requisitions.length">
 	    <input type="button" class="btn btn-primary primary-action" ng-click="vm.convertToOrder()" value="{{'link.requisitions.convertToOrder' | message}}">
-	</openlmis-toolbar>
+	</div>
 </div>
